Make radeon_dri2_create_buffer(s) more robust. (Bug #30047)

In particular, handle and propagate failure to allocate GPU accessible memory,
instead of crashing. Fixes https://bugs.freedesktop.org/show_bug.cgi?id=30047 .

Also take care not to leak resources in error paths.

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>